[gd_scene load_steps=14 format=3 uid="uid://ceklyksm3l4sl"]

[ext_resource type="Script" path="res://Objects/Scenes/Enemies/slime.gd" id="1_6kjkt"]
[ext_resource type="Script" path="res://Objects/Scenes/Enemies/DropXPComponent.gd" id="2_3xsq7"]
[ext_resource type="PackedScene" uid="uid://cg5juf0ykl0rd" path="res://Objects/Scenes/exp.tscn" id="2_ju2c7"]
[ext_resource type="PackedScene" uid="uid://mv6hrc7iftrg" path="res://Objects/Scenes/HealthComponent.tscn" id="3_dnhth"]
[ext_resource type="Texture2D" uid="uid://dbdgv7mr5blec" path="res://Assets/Enemies/MiniAswang-Free.png" id="4_eo2op"]

[sub_resource type="BoxShape3D" id="BoxShape3D_bllru"]
size = Vector3(0.788818, 1, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5til4"]
radius = 2.0

[sub_resource type="Animation" id="Animation_jxcj1"]
resource_name = "idle"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_p04s6"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_aasuq"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_qbbev"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_nejw0"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rdmtv"]
_data = {
"idle": SubResource("Animation_jxcj1"),
"walk_down": SubResource("Animation_p04s6"),
"walk_left": SubResource("Animation_aasuq"),
"walk_right": SubResource("Animation_qbbev"),
"walk_up": SubResource("Animation_nejw0")
}

[node name="Bat" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_6kjkt")
movement_speed = 4.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0020752, 0)
shape = SubResource("BoxShape3D_bllru")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="PathUpdateTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="DropXPComponent" type="Node" parent="."]
script = ExtResource("2_3xsq7")
exp_packed = ExtResource("2_ju2c7")

[node name="HealthComponent" parent="." instance=ExtResource("3_dnhth")]
max_health = 100

[node name="AttackRadius" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRadius"]
shape = SubResource("CylinderShape3D_5til4")

[node name="AttackTimer" type="Timer" parent="."]

[node name="Character" type="Sprite3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.422618, 0.906308, 0, 0.906308, 0.422618, -1, 1.84732e-08, -3.9616e-08, 0, 0, 0)
pixel_size = 0.02
shaded = true
texture_filter = 0
texture = ExtResource("4_eo2op")
hframes = 4
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Character"]
libraries = {
"": SubResource("AnimationLibrary_rdmtv")
}

[connection signal="timeout" from="PathUpdateTimer" to="." method="_on_PathUpdateTimer_timeout"]
[connection signal="died_signal" from="HealthComponent" to="." method="_on_health_died_signal"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
